Fixed misaligned icons

--- a/CSS/match.css
+++ b/CSS/match.css
@@ -185,4 +185,5 @@
 }
 .matchPlayerStats span {
     font-size: 1em;
+    vertical-align: middle;
 }
